# Cfiles

./: GLcompile  Makefile  a.out  array-azure-pipelines.yml  arrays  artifact_publish.yml  ascii.c  azure-pipelines.yml  beef.txt  blankcurses.c  cget.c  cget1  character.c  csv.c  dave.c  drinks.csv  employeedb.c  files.c  flexiblearray.c  goto.c  hal9000.c  hal9001.c  hal9002.c  hello  helloalt.c  index.html  indexfuncs.c  keychecker  ncexamples  ncurses.c  ncurses2.c  ncurses3.c  ncurses4.c  ncurses5.c  ncurses6.c  newhello.c  newtypes.c  pointer2function.c  readkey.s  readme.md  (+11 more)
OpenGl/: CMakeLists.txt  openglcomp  redbooktemplate.c
OpenGl/hello/: CMakeLists.txt  openglhello.c
OpenGl/redbook4/: CMakeLists.txt  redbookex4.c
cpphash/: CPPnotes.txt  Makefile  a.out  chash.h  classes.py  csvread  csvread.cpp  hash  hash.cpp  hash.h  main.cpp
davesSpecial/: CMakeLists.txt  addentry.c  app.c  app.h  init.c  saverecord.c
maketest/: Makefile  main.cpp  message.cpp  message.h
ncexamples/: chgat  clip_printw  color_set  demo_altkeys  demo_forms  demo_panels  dots_mvcur  dots_termcap  filter  firework  form_driver_w  hanoi  inch_wide  inchs  insdelln  key_names  keynames  list_keys  lrtest  ncurses  newdemo  rain  redraw  test_addstr  test_get_wstr  test_instr  test_opaque  test_setupterm  test_sgr  testaddch  xmas
pico/: CMakeLists.txt  pico-gen-project.sh
server/: CMakeLists.txt  client  client.c  http.c  http.h  webserver.c
vsprojects/GLC/: test  (+6 more)
xlib/: CMakeLists.txt  create_GLX_project  sample.c  version.h.in
xlib/OpenGLbasic/: CMakeLists.txt  version.h
(+185 files in other folders)
